# ColonyGame

./: .gitignore  meson.build  readme.md
src/: config.h  entity.cpp  entity.h  game.cpp  game.h  gamestate.h  input.h  main.cpp  mainstate.cpp  mainstate.h  meson.build  renderer.cpp  renderer.h  resource_manager.cpp  resourcemanager.cpp  resourcemanager.h
src/component/: component_manager.h  componentmanager.h  components.h
src/components/: PositionComponent.h  component.h
src/entity/: entity_manager.cpp  entity_manager.h  entitymanager.cpp  entitymanager.h
src/event/: event.h  event_listener.h  event_manager.h  eventmanager.h
src/perlin/: PerlinNoise.h
src/state/: gamestate.h  main_state.cpp  main_state.h  mainstate.cpp  mainstate.h
src/system/: player_system.h  playersystem.h  render_system.h  rendersystem.h  simple_ai_system.h  simpleaisystem.h  system.h
src/ui/: button.h  ui_system.cpp  ui_system.h  uielement.h  uisystem.cpp  uisystem.h
src/world/: level.cpp  level.h  tile.h
